--- a/contact.html
+++ b/contact.html
@@ -5,52 +5,77 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
-    <body>
-        <header>
-            <div id="headDiv">
+  <body class="d-flex flex-column">
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top" style="padding-bottom:0px;">
+            <div class= "container" id="headDiv">
                 <div id="name">
                     <h1>Nitesh</h1>
                 </div>
-                <nav>
-                    <h4><a class="navbtn" href="index.html">About</a></h4>
-                    <h4><a class="navbtn" href="portfolio.html">Portfolio</a></h4>
-                    <h4><a class="navbtn" href="contact.html">Contact</a></h4>
-                </nav>
-            </div>
-        </header>
-
-        <div id="content">
-            <div id="main">
-                <h1>Contact</h1>
-                <hr id="hrMain">
-                <form>
-                    Name<br>
-                    <input type="text" name="name" placeholder="John Smith"><br>
-                    Email<br>
-                    <input type="text" name="email" placeholder="example@gmail.com"><br>
-                    Message<br>
-                    <!-- <input id ="message" type="text" name="message"><br> -->
-                    <textarea name="message"></textarea><br>
-                    <input type="submit" value="Submit" id="submit">
-                </form>
-            </div>
-            <div id="CWM">
-                <h2>Connect With Me</h2>
-                <hr>
-                <div id="icons">
-                    <a target="_blank" href="https://github.com/nbhatia03" class="icon-link"><img alt="Github Icon" src ="assets/images/icon_Github.png" class="icon"></a>
-                    <a target="_blank" href="https://www.linkedin.com/in/nitesh-bhatia" class="icon-link"><img alt="LinkedIn Icon" src ="assets/images/icon_LinkedIn.png" class="icon"></a>
-                    <a target="_blank" href="https://stackoverflow.com/users/8916724/tesh" class="icon-link"><img alt="Stack Overflow Icon" src ="assets/images/icon_Stack.png" class="icon"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Contact</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-        </div>
+        </nav>
+    
 
-        <footer>
+        <div class="container flex-grow">
+            <div class="row" id="content">
+                <div class="col-md-7 col-lg-7" id="main">
+                    <h1>Contact</h1>
+                    <hr id="hrMain">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Name</label>
+                            <input type="name" class="form-control"  placeholder="John Smith">
+                        </div> 
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" class="form-control"  placeholder="example@email.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="">Message</label>
+                            <textarea class="col-12" name="message"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+                <div class="col-md-4 col-lg-4 offset-md-1 offset-lg-1" id="CWM">
+                    <h4>Connect With Me</h4>
+                    <hr id="hrCWM">
+                    <div class="row" id="icons">
+                        <a target="_blank" href="https://github.com/nbhatia03" class="col-3 col-md-4 icon-link"><img alt="Github Icon" src ="assets/images/icon_Github.png" class="icon"></a>
+                        <a target="_blank" href="https://www.linkedin.com/in/nitesh-bhatia" class="col-3 col-md-4 icon-link"><img alt="LinkedIn Icon" src ="assets/images/icon_LinkedIn.png" class="icon"></a>
+                        <a target="_blank" href="https://stackoverflow.com/users/8916724/tesh" class="col-3 col-md-4 icon-link"><img alt="Stack Overflow Icon" src ="assets/images/icon_Stack.png" class="icon"></a>
+                    </div>
+                </div>
+            </div>
+
+        </div>    
+        <footer class="sticky-footer">
             <h6>&copy; Copyright 2017 Nitesh Bhatia</h6>
         </footer>
+
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
     </body>
 </html>
