Finally got the portfolio labels to adjust correctly

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,25 +43,27 @@
                 <h1>Portfolio</h1>
                 <hr id="hrMain">
                 <div id="portPics">
-                    <div class="portPic">
-                        <img alt="placeholder image" src="assets/images/Portfolio.jpg">
-                        <h5>Lorem</h5>
-                    </div>
-                    <div class="portPic">
-                        <img alt="placeholder image" src="assets/images/Portfolio.jpg">
-                        <h5>Ipsum</h5>
-                    </div>
-                    <div class="portPic">
-                        <img alt="placeholder image" src="assets/images/Portfolio.jpg">
-                        <h5>Dolor</h5>
-                    </div>
-                    <div class="portPic">
-                        <img alt="placeholder image" src="assets/images/Portfolio.jpg">
-                        <h5>Sit</h5>
-                    </div>
-                    <div class="portPic">
-                        <img alt="placeholder image" src="assets/images/Portfolio.jpg">
-                        <h5>Amet</h5>
+                    <div class="row">
+                        <div class="portPic col-lg-6">
+                            <img alt="placeholder image" src="assets/images/Portfolio.jpg">
+                            <div class="portLabel"><h5>Lorem</h5></div>
+                        </div>
+                        <div class="portPic col-lg-6">
+                            <img alt="placeholder image" src="assets/images/Portfolio.jpg">
+                            <div class="portLabel"><h5>Ipsum</h5></div>
+                        </div>
+                        <div class="portPic col-lg-6">
+                            <img alt="placeholder image" src="assets/images/Portfolio.jpg">
+                            <div class="portLabel"><h5>Dolor</h5></div>
+                        </div>
+                        <div class="portPic col-lg-6">
+                            <img alt="placeholder image" src="assets/images/Portfolio.jpg">
+                            <div class="portLabel"><h5>Sit</h5></div>
+                        </div>
+                        <div class="portPic col-lg-6">
+                            <img alt="placeholder image" src="assets/images/Portfolio.jpg">
+                            <div class="portLabel"><h5>Amet</h5></div>
+                        </div>
                     </div>
                 </div>
             </div>
